Allow properties to be set in any order

The code as written needlessly required summary to be set first.
https://bugzilla.gnome.org/show_bug.cgi?id=645222